static/css/main.css
body {
    margin: auto;
    font-family: system-ui, -apple-system, system-ui, "Helvetica Neue", Helvetica, Arial, sans-serif;
}

.transparent-button {
    font-size: 1em;
    color: gray;
    font-family: inherit;
    font-weight: 800;
    cursor: pointer;
    position: relative;
    border: none;
    background: none;
    text-transform: uppercase;
    transition-timing-function: cubic-bezier(0.25, 0.8, 0.25, 1);
    transition-duration: 400ms;
    transition-property: color;
}

.transparent-button:hover {
    color: black;
}

.transparent-button:hover:after {
    width: 100%;
    left: 0%;
}

.transparent-button:after {
    content: "";
    pointer-events: none;
    bottom: -2px;
    left: 50%;
    position: absolute;
    width: 0%;
    height: 2px;
    background-color: black;
    transition-timing-function: cubic-bezier(0.25, 0.8, 0.25, 1);
    transition-duration: 400ms;
    transition-property: width, left;
}

.page-button {
    align-items: center;
    background-color: white;
    border: 1px solid rgba(0, 0, 0, 0.1);
    border-radius: .25rem;
    box-shadow: rgba(0, 0, 0, 0.02) 0 1px 3px 0;
    box-sizing: border-box;
    color: rgba(0, 0, 0, 0.85);
    cursor: pointer;
    display: inline-flex;
    font-family: system-ui, -apple-system, system-ui, "Helvetica Neue", Helvetica, Arial, sans-serif;
    font-size: 16px;
    font-weight: 600;
    justify-content: center;
    line-height: 1;
    margin: 0;
    min-height: 2rem;
    padding: calc(.875rem - 1px) calc(1.5rem - 1px);
    text-decoration: none;
    transition: all 250ms;
    user-select: none;
    -webkit-user-select: none;
    touch-action: manipulation;
    vertical-align: baseline;
    width: auto;
}

.page-button:hover,
.page-button:focus {
    border-color: rgba(0, 0, 0, 0.15);
    box-shadow: rgba(0, 0, 0, 0.1) 0 4px 12px;
    color: rgba(0, 0, 0, 0.65);
}

.page-button:hover {
    transform: translateY(-1px);
}

.page-button:active {
    background-color: #F0F0F1;
    border-color: rgba(0, 0, 0, 0.15);
    box-shadow: rgba(0, 0, 0, 0.06) 0 2px 4px;
    color: rgba(0, 0, 0, 0.65);
    transform: translateY(0);
}

.main-page {
    width: 100%;
    min-height: 100vh;
    background: #eceaff;
    color: #525252;
}

nav {
    background: purple;
    height: 10vh;
    margin: auto;
    padding-left: 10%;
    padding-right: 5%;
    display: flex;
    align-items: center;
    justify-content: space-between;
    position: -webkit-sticky;
    position: sticky;
    top: 0;
}

.logo {
    color: white;
}

nav ul {
    width: 100%;
    text-align: left;
}

nav ul li {
    display: inline-block;
    list-style: none;
    margin: 2em;
    font-family: 'Enriqueta', arial, serif;
}

nav ul li a {
    color: #fff;
    text-decoration: none;
}

.sub-menu-wrap {
    position: absolute;
    top: 100%;
    right: 1em;
    width: 20vw;
    max-height: 0em;
    overflow: hidden;
    transition: max-height 0.5s;
}

.open-menu {
    max-height: 50vh;
}

.sub-menu {
    background: #fff;
    padding: 1em;
    z-index: 2;
    position: relative;
}

.user-info {
    display: flex;
    align-items: center;
}

.user-info h3 {
    font-weight: 500;
}

.user-info img {
    width: 60px;
    border-radius: 50%;
    margin-right: 15px;
}

.sub-menu hr {
    border: 0;
    height: 0.1em;
    width: 100%;
    background: #ccc;
    margin: 1em 0em 1em;
}

.sub-menu-link {
    display: flex;
    align-items: center;
    text-decoration: none;
    color: #525252;
    margin: 0.85em 0;
}

.sub-menu-link p {
    width: 100%;
}

.sub-menu-link img {
    width: 1.5em;
    background: #e5e5e5;
    border-radius: 50%;
    padding: 0.5em;
    margin-right: 1em;
}

.sub-menu-link span {
    font-size: 22px;
    transition: transform 0.5s;
}

.sub-menu-link:hover span {
    transform: translateX(5px);
}

.sub-menu-link:hover p {
    font-weight: 600;
}

#user-profile-icon {
    font-size: 2em;
    color: white;
}

.all-boards-container {
    margin-top: 10em;
    margin-bottom: 5em;
    min-height: 50vh;
    width: 80%;
    display: flex;
    flex-direction: column;
    align-items: center;
}

.center-all-content {
    display: flex;
    align-items: center;
    justify-content: center;
}

.board-header {
    padding: 2em;
}

.board-name {
    font-size: 2em;
    width: 60%;
}

.cards-container {
    padding-left: 3em;
    padding-right: 3em;
    display: grid;
    grid-template-columns: 1fr 1fr 1fr 1fr;
    align-items: flex-start;
    grid-gap: 1em;
}

.single-card {
    min-height: 1em;
    display: flex;
    align-items: center;
    flex-direction: column;
    padding-bottom: 1em;
    background-color: #ebecf0;
    border-radius: 0.5em;
    border: 1px solid lightgray;
}

.single-card:hover {
    border: 1px solid gray;
}

.single-board {
    width: 90%;
    margin-bottom: 5em;
    max-height: 300em;
    transition: max-height 2s;
}

.card-name {
    margin-top: 0.5em;
    margin-bottom: 0.5em;
    font-weight: bold;
}

.card-item {
    margin-top: 0.5em;
    margin-bottom: 0.5em;
    width: 90%;
    display: flex;
    justify-content: center;
    background: #fff;
    box-shadow: white 2px 2px;
    border-radius: 0.2em;
}

.card-item:hover {
    cursor: pointer;
    background: lightgray;
    box-shadow: lightgray 2px 2px;
}

.single-card-item-section {
    width: 90%;
    display: flex;
    flex-direction: column;
    align-items: center;
}

.new-board-wrapper {
    width: 90%;
    display: flex;
    justify-content: flex-end;
    margin-top: 3em;
}

.board-name-edit, .card-name-edit {
    background: transparent;
    border: none;
}

.board-name-edit:focus {
    outline: none;
}

#card-edit-form {
    display: flex;
    text-align: center;
    flex-direction: column;
    justify-content: center;
}

#card-edit-form > input:focus {
    outline: none;
}

#card-edit-form > input {
    text-align: center;
}

#card-edit-form > .page-button {
    padding: 0;
}

.hide-display {
    display: none;
}

.show-display {
    display: block;
}

.rotate-transition {
    transform: rotate(180deg);
    transition: transform 0.4s ease-in-out;
}

.board-name-arrow {
    font-size: 1.7em;
    cursor: pointer;
    float: right;
    transition: transform 0.4s ease-in-out;
}

.hide-board {
    transition: max-height 0.5s ease;
    max-height: 9em;
    overflow: hidden;
}

.blur-background {
    /*opacity: 30%;*/
    filter: blur(3px);
}

.modal {
    display: none;
    position: fixed;
    z-index: 1;
    left: 0;
    top: 0;
    width: 100%;
    height: 100%;
    overflow: auto;
    background-color: rgb(0, 0, 0);
    background-color: rgba(0, 0, 0, 0.4);
}

.modal-content {
    background-color: #fefefe;
    margin: 15% auto;
    padding: 2em;
    border: 1px solid #888;
    width: 50%;
    text-align: center;
}

.close {
    color: #aaaaaa;
    float: right;
    font-size: 28px;
    font-weight: bold;
}

.close:hover,
.close:focus {
    color: #000;
    text-decoration: none;
    cursor: pointer;
}

#yes-delete-button:hover {
    background-color: red;
    color: white;
}

#no-delete-button:hover {
    background-color: green;
    color: white;
}

#trash-icon-delete-board {
    font-size: 2em;
}

#trash-icon-delete-board:hover {
    color: red;
    cursor: pointer;
}

.board-header-buttons {
    display: flex;
    flex-direction: row;
    flex-wrap: wrap;
    justify-content: space-between;
}

